# ROS---2

./: README.md
docs/: COMMIT_SCHEDULE.md  GIT_WORKFLOW.md  USAGE_GUIDE.md
install/: local_setup.sh  setup.sh
install/basic_description/share/basic_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/basic_py_examples/lib/basic_py_examples/: parameters_demo  simple_publisher  simple_subscriber
install/basic_py_examples/share/basic_py_examples/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/conveyor_belt_system/share/conveyor_belt_system/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/conveyor_manipulation/lib/conveyor_manipulation/: robot_controller
log/: latest_build
scripts/: automated_commits.sh
src/basic_description/: CMakeLists.txt  README.md  package.xml
src/basic_description/urdf/: basic_urdf.xacro
src/basic_py_examples/: setup.cfg  setup.py
src/basic_py_examples/basic_py_examples/: simple_subscriber.py
src/conveyor_belt_system/: CMakeLists.txt  package.xml
src/conveyor_belt_system/config/: robot_controllers.yaml
src/conveyor_belt_system/launch/: gazebo_simulation.launch.py
src/conveyor_belt_system/plugins/: conveyor_physics.cpp
src/conveyor_belt_system/rviz/: robot_conveyor.rviz
src/conveyor_manipulation/: package.xml  setup.cfg  setup.py
src/conveyor_manipulation/conveyor_manipulation/: robot_controller.py
src/robot_moveit_config/config/: moveit_config.yaml  robot.srdf
test/: integration_tests.py
(+43 files in other folders)
